components/policies/base/build-resources/adjust-buildah-resources-for-remote-platforms/.chainsaw-test/resources/pod-no-platform.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-no-platform
  labels:
    tekton.dev/task: buildah-remote-oci-ta
spec:
  containers:
  - name: step-build
    image: busybox
    command: ["sleep", "infinity"]
    resources:
      requests:
        cpu: "4"
        memory: 8Gi
      limits:
        cpu: "4"
        memory: 8Gi
